# storyseed-tauri

./: .gitignore  README-시작하기.md  package-lock.json  package.json  실전-자동업데이트-안내.md  업데이트-커밋-재빌드-가이드.md  자동업데이트-설정-가이드.md
.github/workflows/: build.yml  release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/fonts/: 여기에-폰트-넣기.md
~/.tauri/: storyseed.key  storyseed.key.pub
